0.013
  - Performance monitoring for Callback writes.

0.012
  - Data can be passed by reference.

0.011
  - "Callback" subclass for when you don't have the entire file to send at
    the start.

0.008
  - Advise the OS about our file accessing through posix_fadvise(2).

0.007
  - Fix the "Connection error: unknown error" issue on first retry

0.006
  - Have a much longer timeout for HTTP response than general IO as
    lighty will move the temporary file before responding.

0.005
  - Bump timeout on read/write to 60 seconds for when machines are busy.

0.004
  - Deal with servers which reply with HTTP 1.1 to 1.0 requests.

0.003
  - Fix retrying to work correctly.

0.002
  - Add one retry to PUT request on each path given by the tracker
  - Move use of $! up to hopefully capture the socket error before it
    is removed by clearing the timeout guard.

0.001
  - Initial very rough cut
